fix(style): double scrollbars due to bootstrap (#485)

--- a/src/styles/styles.global.scss
+++ b/src/styles/styles.global.scss
@@ -4,10 +4,14 @@
     }
 }
 
+body {
+    overflow-y: auto !important;
+}
+
 .animation-blinking {
     animation: blinker 1s linear infinite;
 }
 
 .content {
-    overflow-y: scroll;
+    overflow-y: auto;
 }
